# autoattendance

Arduino/: sensor.ino
I.MX8/: CMakeLists.txt  main.cpp
I.MX8/include/: Serial.hpp  byte.h  dbform.hpp
I.MX8/src/: Serial.cpp  autoattendance.cpp  main.cpp
server/: index.js  package-lock.json  package.json  register.js
